ops/deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-app
  labels:
    name: node-app
spec:
  containers:
  - name: node-app
    image: marlonglopes/node-app:0.0.1 
    ports:
    - containerPort: 8080
