ops/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  labels:
    app: node-app-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app-1
  template:
    metadata:
      labels:
        app: node-app-1
    spec:
      containers:
      - name: node-app-1
        image: marlonglopes/node-app:0.0.1
        ports:
        - containerPort: 8080
